Bug 259565 - "display tooltips"-setting -> "never" is not saved
Summary: "display tooltips"-setting -> "never" is not saved
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.89
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-12 02:45 UTC by m.wege
Modified: 2010-12-12 16:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2010-12-12 02:45:18 UTC
Version:           2.0.89 (using KDE 4.5.85) 
OS:                Linux

When I select "display tooltips"-> "never" the setting is not saved and is lost after saving.

Reproducible: Always




OS: Linux (i686) release 2.6.37-7-generic-pae
Compiler: cc
Comment 1 Tobias Koenig 2010-12-12 16:10:58 UTC
SVN commit 1205794 by tokoe:

Restore the ToolTipDisplayRole correctly from the
config file.

BUG: 259565


 M  +1 -0      foldertreeview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1205794