Restore the ToolTipDisplayRole correctly from the config file.

BUG: 259565

svn path=/trunk/KDE/kdepim/; revision=1205794